Change gpu driver bug list test_group semantics from replace to append

Because we don't want to disable necessary workarounds on bots, otherwise
Chrome run may fail.

BUG=895020,895945
TEST=gpu_unittests,gpu_integration_test:gpu_process
R=piman@chromium.org

Change-Id: I496e3cac9f16943d57cb10334648c1b54f976543
Reviewed-on: https://chromium-review.googlesource.com/c/1289699
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601758}
Former-commit-id: 8241b8e3270f62b8018e273ac0e5fb0586c40324